feat: better Pieces graphic